      
[API changes]
 - Added MediaType.TEXT_CALENDAR constant for iCalendar events. Suggested by Aron Roberts.
 - Added default constructor to NRE's HttpServerHelper and a setServer() method to
   NRE's ServerHelper. Suggested by Brandon Lonac.
 - Renamed internal NRE's HttpCall.setProtocol() to setVersion().
 - Added Parameter.setName() method.

[Enhancements] 
 - Fixed Spring plugin descriptor for Eclipse.
 - Upgraded Velocity to version 1.5.
 - Added Apache Commons Lang library, dependency for Velocity 1.5.
 - Completed missing Javadocs for Series class. Reported by Jonathan Hall.
 - Added warning message when no Restlet API found in the classpath.
 - Upgraded Apache HTTP Client to 3.1 RC1.
 - Tutorial examples now statically import the Constants class instead of implementing
   the Constants interface anti-pattern. Reported by Sean Landis.
 
1.0 RC5 (2007-03-09)
[Bugs fixed]
 - Added missing dependency on Apache Commons IO for the Commons FileUpload library. Reported by Thierry Boileau.
 - Fixed unconformity with pre-conditions test when the resource has no representation and the client sends "if-match:*" header.
 - TunnelService wasn't removing the preference parameters from the query after usage. Reported by Valdis Rigdon.
 - Fixed potential NPE in Router.detach() method. Reported by Alex Combs.
 - Stop the applications attached to the default virtual host when stopping the component. Reported by Alex Combs.
 - Fixed ServerServlet adapter to make it start and stop the application with the Servlet lifecycle. Previously the
   application was started upon the first request and never stopped.
 - Fixed bug with the order of the representations provided by a Directory (TEXT/URI-LIST and TEXT/HTML) as IE does 
   not send HTML preference in the Accept headers.
 - Send the Vary header only to none-MSIE user agents as MSIE seems to support badly this header. Reported by Heinrich Klobuczek.